JDK25 update (#114)